--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bootstrap": "^5.3.2",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
+    "react-cookie": "^7.0.2",
     "react-dom": "^18.2.0",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
